fix: accordion on small devices

--- a/src/components/Carousel/Carousel.scss
+++ b/src/components/Carousel/Carousel.scss
@@ -11,6 +11,12 @@
   justify-content: center;
 }
 
+@media only screen and (max-width: 768px) {
+  .carousel-items-container {
+    flex-direction: column;
+  }
+}
+
 .control-container {
   display: flex;
   justify-content: center;
