--- a/src/components/Carousel/CarouselItem/CarouselItem.scss
+++ b/src/components/Carousel/CarouselItem/CarouselItem.scss
@@ -33,3 +33,55 @@
 .carousel-item:not(.active) {
   z-index: 1000;
 }
+
+@media only screen and (max-width: 1025px) {
+  .carousel-item {
+    width: 250px;
+    height: 300px;
+    padding: 1rem;
+
+    img {
+      height: 100px;
+      margin-bottom: 15px;
+    }
+
+    .title {
+      font-size: 1.25rem;
+      display: block;
+      margin-bottom: 15px;
+    }
+  }
+
+  .carousel-item.active {
+    background-color: var(--darkest-blue-color);
+    width: 300px;
+    height: 350px;
+    padding: 1rem;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .carousel-item {
+    width: 300px;
+    height: 350px;
+    padding: 1rem;
+
+    img {
+      height: 100px;
+      margin-bottom: 15px;
+    }
+
+    .title {
+      font-size: 1.25rem;
+      display: block;
+      margin-bottom: 15px;
+    }
+  }
+
+  .carousel-item.active {
+    background-color: var(--darkest-blue-color);
+    width: 300px;
+    height: 350px;
+    padding: 1rem;
+  }
+}
