--- a/src/index.scss
+++ b/src/index.scss
@@ -7,10 +7,6 @@ html {
   scroll-behavior: smooth;
 }
 
-body {
-  overflow-x: hidden;
-}
-
 * {
   box-sizing: border-box;
   color: var(--white-color);
